fix: remove font alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -111,7 +111,7 @@ body {
     box-shadow: 2px 2px 0.5rem 0.0625rem var(--bgCol);
 }
 
-button, input[type="text"], input[type="number"], select, option {
+button, input[type="text"], input[type="number"] {
     color: var(--bgCol);
 }
 
